# peer-eval

./: .env.example  .gitignore  MANIFEST.in  README.md  SETUP.md  SETUP_CYCLE2.md  TROUBLESHOOTING.md  activate.sh  collector.py  generate_scenarios.py  llm_stage2a.py  llm_stage2b.py  loader.py  main.py  model.py  pyproject.toml  pytest.ini  report.py  requirements.txt  scorer.py  setup.py  setup_env.sh
fixtures/: mr_artifacts.json
fixtures/scenarios/: set1_s1_so_review.json  set1_s2_mrs_pequenos_vs_grande.json  set1_s3_commit_direto.json  set1_s4_mr_sem_revisor.json  set1_s5_codigo_nao_sobrevive.json  set1_s6_grupo_desequilibrado.json  set2_s1_pequeno_mas_nobre.json  set2_s2_review_forte_sem_autoria.json  set2_s3_fragmentacao.json  set2_s4_perfis_distintos.json  set2_s5_sem_ci.json  set2_s6_nao_sobrevive.json
output/g03/: full_report.json  group_report.json  mr_llm_estimates.json
peer_eval/: __init__.py  cli.py  collector.py  config.py  exceptions.py  llm_stage2_commits.py  llm_stage2a.py  llm_stage2b.py  loader.py  main.py  model.py  report.py  scorer.py
peer_eval/cli/: __init__.py  dispatcher.py  env.py  parser.py  resolution.py
peer_eval/cli/commands/: __init__.py  base.py  doctor.py  fixture.py  github.py  gitlab.py  init.py
peer_eval/cli/runners/: shared.py
peer_eval/configuration/: loader.py  models.py
peer_eval/prompts/: avaliacao_llm.md
peer_eval/providers/: __init__.py  base.py  fixture.py  github.py  gitlab.py
scripts/: run_scenarios.py
tests/: conftest.py  test_cli_resolution.py  test_loader.py  test_model.py  test_scenarios.py  test_scorer.py
